--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
 
 <body>
     <canvas id="vp" width="640" height="480"></canvas>
+    <script src="rules.js"></script>
     <script src="app.js"></script>
 </body>
 
